--- a/MultiPlatformTest/MainPage.xaml
+++ b/MultiPlatformTest/MainPage.xaml
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:d="http://xamarin.com/schemas/2014/forms/design" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="MultiPlatformTest.MainPage">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:local="clr-namespace:MultiPlatformTest;assembly=MultiPlatformTest"
+             mc:Ignorable="d" x:Class="MultiPlatformTest.MainPage">
     <StackLayout>
-        <WebView x:Name="webview" WidthRequest="1000" HeightRequest="1000" />
+        <local:HybridWebView x:Name="webview" WidthRequest="1000" HeightRequest="1000" />
     </StackLayout>
 </ContentPage>
